Fix horizontal overflow on about page

--- a/style2.css
+++ b/style2.css
@@ -742,7 +742,7 @@ padding-top: 20px;
    position: absolute;
     top: 9%;
     right: 6%;
-    width:300px;
+    width: 391px;
     padding: var(--lg);
     align-items: flex-start;
     display: flex;
